<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingTop="24dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/bottom_sheet_review_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/bottom_sheet_review_msg"
            android:textColor="@android:color/black"
            android:textSize="16dp"/>

        <LinearLayout
            android:id="@+id/layoutReviewNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/ignore_cancle_button_circle">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_review_star"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_review_star"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_review_star"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_review_star"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_review_star"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textColor="#000000"
                android:text="@string/bottom_sheet_review_btn_go_now"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">
            <android.widget.Button
                android:id="@+id/btnLater"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:background="@null"
                android:text="@string/bottom_sheet_review_btn_later" />
            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="#E0E0E0"/>
            <android.widget.Button
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:background="@null"
                android:text="@string/bottom_sheet_review_btn_already_done" />
        </LinearLayout>

    </LinearLayout>

</layout>